--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.1",
     "mongoose": "^8.5.2",
-    "vercel": "^35.2.4"
+    "vercel": "^35.2.4",
+    "ws": "^8.18.0"
   }
 }
