--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "^8.5.2",
     "vercel": "^35.2.4",
     "ws": "^8.18.0"
