--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.1",
     "fs": "0.0.1-security",
     "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "vercel": "^35.2.4",
     "ws": "^8.18.0"
