--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "canvas": "^3.1.0",
+    "chart.js": "^4.4.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -22,6 +24,7 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
+    "puppeteer": "^24.4.0",
     "vercel": "^35.2.4",
     "ws": "^8.18.0"
   }
