--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "firebase-admin": "^13.6.0",
     "fs": "0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
